# cmake-examples

./: .gitignore  CMakeLists.txt  README.md  run_cmake_linux.sh
mainproject/: CMakeLists.txt  build.sh
mainproject/src/: main.cpp
school/: CMakeLists.txt  build.sh
school/include/: Student.h  Teacher.h
school/include/Cars/: Car.h
school/src/: Student.cpp  Teacher.cpp
school/src/Cars/: Car.cpp
